<resources>
    <string name="app_name">aaRvidda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="address">深圳</string>
    <string name="tell">136****5228</string>
        <string name="setting1">我要做律师</string>
        <string name="setting2">付款账单</string>
        <string name="setting3">退出登录</string>
<string name="settingl1">切换身份</string>
<string name="settingl2">关注的法律类型</string>
<string name="settingl3">银行卡</string>
<string name="settingl4">收款账单</string>
<string name="log18">请先填写城市</string>
        <string name="log1">请输入您的手机号码</string>
        <string name="log1a">请输入正确的手机号码</string>
        <string name="log2">获取验证码</string>
         <string name="log3">请输入六位验证码</string>
         <string name="log4">点击登陆，即表示同意《用户协议》</string>
         <string name="log5">登陆</string>
         <string name="log6">访问出错，请检查网络连接</string>
         <string name="log7">请先获取验证码</string>
         <string name="log8">请输入正确的验证码</string>
         <string name="log9">提交出错,请再次提交确定</string>
                  <string name="log10">修改出错，请重试</string>
                  <string name="log11">请填写姓名</string>
                  <string name="log12">请填写邮箱</string>
                  <string name="log13">请填写执业证号</string>
                  <string name="log14">请提交证书文件</string>
                  <string name="log15">请先发送一条咨询后再修改</string>
                  <string name="log16">修改成功</string>
                  <string name="log19">请输入正确的邮箱</string>
         <string name="zx1">修改标签出错</string>
         <string name="zx2">修改姓名不能为空</string>
<string name="zxlook">xxxx人</string>
<string name="sqtk1">律师发函资料明细</string>
<string name="sqtk2">服务信息</string>
<string name="sqtk3">用户信息</string>
<string name="sqtk4">律师催告(敦促)函</string>
<string name="sqtk5">王先生委托敦促贷款归信函费用</string>
<string name="sqtk6">¥800</string>
<string name="sqtk7">内容:</string>
<string name="sqtk8">呢个系帮助王生、王太太一家七口老小要返饭钱，呃租嘅人应经历补偿利息损失</string>
<string name="sqtk9">支付日期:2015年8月15日</string>
<string name="sqtk10">支付平台:支付宝</string>
<string name="sqtk11">支付账号:1234567890</string>
<string name="sqtk12">支付流水:989435834953908197235</string>
<string name="sqtk13">系统订单号:1357924680</string>
<string name="sqtk14">申请退款</string>
<string name="grzl1">个人资料</string>
<string name="grzl2">Allen</string>
<string name="grzl3">（律师）</string>
<string name="grzl4">250个</string>
<string name="grzl5">回答问题</string>
<string name="grzl6">75份</string>
<string name="grzl7">服务次数</string>
<string name="grzl8">特长</string>
<string name="grzl9">评价（30）</string>
<string name="grzl10">平均评分</string>
<string name="grzl11">geline Jolie</string>
<string name="grzl12">律师服务态度很好，也很专业</string>
<string name="grzl13">2015-09-28</string>
<string name="grzl14">查看全部评价</string>
<string name="zixun">律嗒</string>
<string name="zixun1">咨询类别标签</string>
<string name="lvsy1">可答问题</string>
<string name="lvsy2">Allen</string>
<string name="lvsy3">个人房厂问题</string>
<string name="lvsy4">合同纠纷</string>
<string name="lvsy5">合同纠纷1</string>
<string name="qlvfh1">律师发函资料</string>
<string name="qlvfh2">委托人(我)</string>
<string name="qlvfh3">请输入委托人姓名</string>
<string name="qlvfh4">对方公司</string>
<string name="qlvfh5">北京移动有限公司</string>
<string name="qlvfh6">对方姓名</string>
<string name="qlvfh7">请输入对方姓名</string>
<string name="qlvfh8">对方电话</string>
<string name="qlvfh9">请输入对方电话</string>
<string name="qlvfh10">对方收信地址</string>
<string name="qlvfh11">请输入对方具体地址</string>
<string name="qlvfh12">取消</string>
<string name="qlvfh13">提交</string>
<string name="qlvfh14"></string>
<string name="sq1">申请资料</string>
<string name="sq2">提交</string>
<string name="sq3">姓名</string>
<string name="sq4">请输入真实姓名</string>
<string name="sq5">手机</string>
<string name="sq6">13800138000</string>
<string name="sq7">邮箱</string>
<string name="sq8">请输入正确的邮箱地址</string>
<string name="sq9">城市</string>
<string name="sq10">深圳</string>
<string name="sq11">律师事务所</string>
<string name="sq12">请输入工作的事务所</string>
<string name="sq13">执业证号</string>
<string name="sq14">请输入工作的事务所</string>
<string name="sq15">执业照图片</string>
<string name="sq16">深圳</string>
<string name="cs1">选择城市</string>
<string name="cs2">已定位城市</string>
<string name="cs3">热门城市</string>
<string name="cs4">律师类型</string>
<string name="tczx1">我提出的咨询</string>
<string name="tczx2">发送</string>
<string name="tczx3">修改咨询类型</string>
<string name="tczx4">设置提问标题</string>
<string name="tczx5">修改咨询类型</string>
<string name="tczx6">确定</string>
<string name="tczx7">请输入咨询标题</string>
<string name="tczx71">请输入您的姓名</string>
<string name="tczx8">取消</string>
<string name="zxlb1">咨询列表</string>
<string name="zxlb2">签订合同问题</string>
<string name="zxlb3">2015年10月3日 17：00</string>
<string name="zxlb4">于律师</string>
<string name="xx1">消息</string>
<string name="xx2">免费体检，尽在律嗒</string>
<string name="xx3">1分钟前</string>
<string name="sz1">设置</string>
<string name="sz2">消息中心</string>
<string name="sz3">用户协议</string>
<string name="sz4">意见反馈</string>
<string name="sz5">版本更新</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading_text_str">加载中，请稍后...</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="The_dissolution_of_chatting">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="login">登陆</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">群聊:</string>
    <string name="not_download">未下载:</string>
	<string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
</resources>