<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/mRlcg1"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/background" >    <ScrollViewandroid:layout_width="fill_parent"android:layout_height="fill_parent"android:fillViewport="true" ><LinearLayout    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:orientation="vertical" >    <TextViewstyle="@style/t_b1_26"android:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:gravity="center_vertical"android:text="@string/qlvfh2" />    <RelativeLayoutandroid:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:background="@drawable/kuang" ><EditText    android:id="@+id/mEt1"    style="@style/t_d_30_3"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:layout_centerVertical="true"    android:layout_marginLeft="@dimen/p10"    android:background="@null"    android:hint="@string/qlvfh3"    android:inputType="text" />    </RelativeLayout>    <TextViewstyle="@style/t_b1_26"android:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:gravity="center_vertical"android:text="@string/qlvfh4" />    <RelativeLayoutandroid:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:background="@drawable/kuang" ><EditText    android:id="@+id/mEt2"    style="@style/t_d_30_3"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:layout_centerVertical="true"    android:layout_marginLeft="@dimen/p10"    android:background="@null"    android:clickable="false"    android:focusable="false"    android:hint="@string/qlvfh5"    android:inputType="text" />    </RelativeLayout>    <TextViewstyle="@style/t_b1_26"android:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:gravity="center_vertical"android:text="@string/qlvfh6" />    <RelativeLayoutandroid:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:background="@drawable/kuang" ><EditText    android:id="@+id/mEt3"    style="@style/t_d_30_3"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:layout_centerVertical="true"    android:layout_marginLeft="@dimen/p10"    android:background="@null"    android:hint="@string/qlvfh7"    android:inputType="text" />    </RelativeLayout>    <TextViewstyle="@style/t_b1_26"android:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:gravity="center_vertical"android:text="@string/qlvfh8" />    <RelativeLayoutandroid:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:background="@drawable/kuang" ><EditText    android:id="@+id/mEt4"    style="@style/t_d_30_3"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:layout_centerVertical="true"    android:layout_marginLeft="@dimen/p10"    android:background="@null"    android:hint="@string/qlvfh9"    android:inputType="phone" />    </RelativeLayout>    <TextViewstyle="@style/t_b1_26"android:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:gravity="center_vertical"android:text="@string/qlvfh10" />    <RelativeLayoutandroid:layout_width="fill_parent"android:layout_height="wrap_content"android:layout_marginLeft="@dimen/p28"android:layout_marginRight="@dimen/p28"android:layout_marginTop="@dimen/p30"android:background="@drawable/kuang" ><EditText    android:id="@+id/mEt5"    style="@style/t_d_30_3"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:layout_centerVertical="true"    android:layout_marginLeft="@dimen/p10"    android:background="@null"    android:hint="@string/qlvfh11"    android:inputType="phone" />    </RelativeLayout>    <Viewandroid:layout_width="fill_parent"android:layout_height="@dimen/p100" /></LinearLayout>    </ScrollView></RelativeLayout>