<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/mRlcg1"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/background" > <ScrollView      android:layout_width="fill_parent"     android:layout_height="fill_parent"     android:fillViewport="true"     >  <LinearLayout       android:layout_width="fill_parent"      android:layout_height="wrap_content"      android:orientation="vertical"      >      <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_bl_30"          android:layout_marginLeft="@dimen/p40"          android:layout_marginRight="@dimen/p40"          android:layout_marginTop="@dimen/p40"          android:text="@string/sqtk4"          />      <ImageView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          android:src="@drawable/longline"                    android:layout_marginTop="@dimen/p40"                    android:layout_marginLeft="@dimen/p40"          android:layout_marginRight="@dimen/p40"          />   <RelativeLayout        android:layout_width="fill_parent"       android:layout_height="wrap_content"       android:layout_marginLeft="@dimen/p40"       android:layout_marginTop="@dimen/p20"       android:layout_marginRight="@dimen/p40"       >      <ImageView           android:layout_width="wrap_content"          android:layout_height="wrap_content"          android:src="@drawable/tupian2"          android:id="@+id/mIv1"          />      <RelativeLayout           android:layout_width="fill_parent"          android:layout_height="wrap_content"                    android:layout_alignTop="@id/mIv1"                    android:layout_toRightOf="@id/mIv1"          android:layout_marginLeft="@dimen/p20"          >                <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_bl_30"          android:text="@string/sqtk5"          />      </RelativeLayout>                      <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_r_36"          android:layout_marginLeft="@dimen/p20"                    android:layout_toRightOf="@id/mIv1"          android:layout_alignBottom="@id/mIv1"          android:text="@string/sqtk6"          />         </RelativeLayout>           <ImageView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          android:src="@drawable/longline"                    android:layout_marginTop="@dimen/p40"                    android:layout_marginLeft="@dimen/p40"          android:layout_marginRight="@dimen/p40"          />        <RelativeLayout          android:layout_width="fill_parent"         android:layout_height="wrap_content"         android:background="@drawable/ashap1"         android:layout_marginLeft="@dimen/p40"         android:layout_marginTop="@dimen/p40"         android:layout_marginRight="@dimen/p40"         >              <RelativeLayout                   android:layout_width="fill_parent"                  android:layout_height="wrap_content"                  android:padding="@dimen/p20"                  >            <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_bl_30"          android:id="@+id/mTv7"          android:text="@string/sqtk7"          />                <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_bl_30"          android:id="@+id/mTv8"          android:layout_marginTop="@dimen/p20"          android:layout_below="@id/mTv7"          android:text="@string/sqtk8"          />                </RelativeLayout>     </RelativeLayout>                   <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_g_26"          android:id="@+id/mTv9"          android:layout_marginLeft="@dimen/p40"          android:layout_marginTop="@dimen/p40"          android:text="@string/sqtk9"          />                     <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_g_26"          android:id="@+id/mTv10"          android:layout_marginLeft="@dimen/p40"          android:layout_marginTop="@dimen/p15"          android:text="@string/sqtk10"          />                     <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_g_26"          android:id="@+id/mTv11"          android:layout_marginLeft="@dimen/p40"          android:layout_marginTop="@dimen/p15"          android:text="@string/sqtk11"          />                                      <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_g_26"          android:id="@+id/mTv12"          android:layout_marginLeft="@dimen/p40"          android:layout_marginTop="@dimen/p15"          android:text="@string/sqtk12"          />                                     <TextView           android:layout_width="fill_parent"          android:layout_height="wrap_content"          style="@style/t_g_26"          android:id="@+id/mTv13"          android:layout_marginLeft="@dimen/p40"          android:layout_marginTop="@dimen/p15"          android:text="@string/sqtk13"          />                                               <RelativeLayout              android:layout_width="fill_parent"             android:layout_height="wrap_content"             android:layout_marginTop="@dimen/p60"             >             <ImageView                  android:layout_width="wrap_content"                 android:layout_height="wrap_content"                 android:src="@drawable/shenqingtk"                 android:id="@+id/mIvtk"                 android:layout_centerInParent="true"                 />         </RelativeLayout>       </LinearLayout> </ScrollView></RelativeLayout>